Copy editing and style tweaks.  Fixed bug with logout redirect

--- a/DjangoGIF/apps/home/templates/home/home.html
+++ b/DjangoGIF/apps/home/templates/home/home.html
@@ -61,7 +61,7 @@
     <div class="home-demo">
         <div class="home-demo-blurb">View my cache for an example</div>
 
-        <div class="btn green-btn">u/kershner25</div>
+        <a href="/u/kershner25"><div class="btn green-btn">u/kershner25</div></a>
     </div>
 </div>
 
@@ -71,7 +71,7 @@
             <div class="mini-logo">
                 <div class="mini-logo-gif">GIF</div><div class="mini-logo-cache">Cache</div>
             </div>
-            is a service to store and categorize GIF urls focused on speed and user experience.
+            is a service to store and categorize GIF urls.
         </div>
 
         <div class="home-about-section">
@@ -82,7 +82,7 @@
         </div>
 
         <div class="home-about-section">
-            Please be aware that when using GifCache and viewing numerous GIFs, your bandwidth usage
+            Be aware that when using GifCache and viewing numerous GIFs, bandwidth usage
             can easily hit hundreds of megabytes very quickly.
         </div>
 
@@ -95,6 +95,7 @@
 
                 <div class="home-whatsnew-notes">
                     <div>- Site launched!</div>
+                    <div>- Added mp4, gfycat, webm, and gifv support</div>
                     <div>- Chrome extension coming soon!</div>
                 </div>
             </div>
