Added 404 and 500 error pages. Renamed app.  Lots of CSS/markup tweaks

--- a/gifcache/apps/home/templates/home/home.html
+++ b/gifcache/apps/home/templates/home/home.html
@@ -4,9 +4,9 @@
 
 <div class="home-section animate-bg" style="height: 100vh; padding-top: 2em;">
     <div id="main-logo">
-        <div class="main-logo-gif transparent animate">GIF</div>
+        <div class="main-logo-gif transparent pulse animate">GIF</div>
         <div class="main-logo-img grow"><img src="http://i.imgur.com/eXxTPkH.gif"></div>
-        <div class="main-logo-cache transparent animate">Cache</div>
+        <div class="main-logo-cache transparent pulse animate">Cache</div>
     </div>
 
     <div class="slogan transparent animate">Store, organize, and display your favorite GIFs</div>
@@ -107,8 +107,4 @@
         <a href="http://www.kershner.org"><div class="home-plug-link animate">kershner.org</div></a>
     </div>
 </div>
-{% if message %}
-    <p class="message">{{ message }}</p>
-{% endif %}
-
 {% endblock %}
