--- a/gifcache/apps/users/templates/users/view.html
+++ b/gifcache/apps/users/templates/users/view.html
@@ -303,7 +303,7 @@
     </div>
     {% else %}
         {% if can_edit %}
-            <div class="message">Welcome to your GifCache!  Go ahead and add some GIFs!</div>
+            <div class="welcome-msg">Welcome to your GifCache!</div>
         {% else %}
             <div class="message">{{ name }} hasn't added any GIFs yet.</div>
         {% endif %}
