Template logic improved, some CSS style tweaks

--- a/gifcache/apps/home/templates/home/home.html
+++ b/gifcache/apps/home/templates/home/home.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="home-demo">
-        <div class="home-demo-blurb">View my cache for an example</div>
+        <div class="home-demo-blurb">My cache for an example</div>
 
         <a href="/u/kershner25"><div class="btn green-btn">u/kershner25</div></a>
     </div>
