Made forms responsive (site is fully responsive now), fixed bug with bulk tag adds, added random GIFs to home/nav

--- a/gifcache/apps/home/templates/home/base.html
+++ b/gifcache/apps/home/templates/home/base.html
@@ -32,7 +32,7 @@
         {% endif %}
             <div class="nav-logo">
                 <div id="gif" class="nav-logo-title">GIF</div>
-                <div class="nav-logo-img"><img src="http://i.imgur.com/SpaPReR.gif"></div>
+                <div class="nav-logo-img"><img src="/static/img/{{ random_gif }}.gif"></div>
                 <div id="cache" class="nav-logo-title">Cache</div>
             </div>
 
