--- a/gifcache/apps/home/templates/home/home.html
+++ b/gifcache/apps/home/templates/home/home.html
@@ -1,11 +1,10 @@
 {% extends 'home/base.html' %}
 {% block content %}
-{% load staticfiles %}
 
 <div class="home-section animate-bg" style="height: 100vh; padding-top: 2em;">
     <div id="main-logo">
         <div class="main-logo-gif transparent pulse animate">GIF</div>
-        <div class="main-logo-img grow"><img src="http://i.imgur.com/eXxTPkH.gif"></div>
+        <div class="main-logo-img grow"><img src="/static/img/{{ random_gif }}.gif"></div>
         <div class="main-logo-cache transparent pulse animate">Cache</div>
     </div>
 
@@ -31,7 +30,7 @@
 
         <div class="startup-bs-blurb">Save gifs from the internet</div>
 
-        <div class="startup-bs-img animate"><img src="{% static '/static/img/add-gif.png' %}"></div>
+        <div class="startup-bs-img animate"><img src="/static/img/add-gif.png"></div>
     </div>
 
     <div class="startup-bs-box">
@@ -43,7 +42,7 @@
 
         <div class="startup-bs-blurb">Tag and sort your collection</div>
 
-        <div class="startup-bs-img animate"><img src="{% static '/static/img/add-tags.png' %}"></div>
+        <div class="startup-bs-img animate"><img src="/static/img/add-tags.png"></div>
     </div>
 
     <div class="startup-bs-box">
@@ -55,7 +54,7 @@
 
         <div class="startup-bs-blurb">Show off your cache!</div>
 
-        <div class="startup-bs-img animate"><img src="{% static '/static/img/display.png' %}"></div>
+        <div class="startup-bs-img animate"><img src="/static/img/display.png"></div>
     </div>
 
     <div class="home-demo">
