--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -19,6 +19,7 @@ input {
 	display: block;
 	margin: .5em auto;
 	padding: .25em;	
+	max-width: 90%;
 	font-family: 'Quicksand', sans-serif;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	border: none;
@@ -52,7 +53,7 @@ input {
 	margin-top: 6em;
 	padding: 1em;
 	padding-top: 2em;
-	width: 25em;
+	max-width: 25em;
 	background-color: #25B972;
 	border: .3em solid white;
 	border-radius: .25em;
@@ -60,6 +61,7 @@ input {
 }
 
 .main-form input {
+	max-width: 75%;
 	height: 1.5em;
 	line-height: 1.5em;
 	font-size: 1.5em;
@@ -1115,7 +1117,7 @@ input {
 	padding: 1.5em;
 	padding-top: 3em;
 	top: 15%;
-	width: 20em;
+	max-width: 20em;
 	height: 21em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	background-color: rgba(114, 173, 211, 0.8);
@@ -1580,7 +1582,6 @@ input {
 	background-color: rgba(0, 0, 0, 0.8);
 	width: 100%;
 	height: 100%;
-	border-radius: .75em;
 }
 
 .edit-profile-delete {
@@ -1623,12 +1624,12 @@ input {
 
 .delete-profile-button {
 	display: inline-block;
-	position: relative;
+	position: absolute;
 	padding: .2em .75em;
 	padding-right: .25em;
 	padding-bottom: .5em;
-	top: -1.75em;
-	right: -18em;
+	top: .25em;
+	right: .5em;
 	color: white;	
 	text-shadow: 1px 1px 3px #000;
 	border-radius: .25em;
