--- a/gifcache/apps/home/templates/home/home.html
+++ b/gifcache/apps/home/templates/home/home.html
@@ -83,6 +83,13 @@
         <div class="home-about-section">
             Be aware that when using GifCache and viewing numerous GIFs, bandwidth usage
             can easily hit hundreds of megabytes very quickly.
+
+            <div class="code-link animate">
+                <a href="https://github.com/kershner/gifcache">
+                    <i class="fa fa-github"></i>
+                    View the code!
+                </a>
+            </div>
         </div>
 
         <div class="home-about-section">
