--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -310,11 +310,13 @@ input {
 
 /* Footer *******************************************************************/
 .wrapper {
+	margin: 0 auto -10em;
 	min-height: 100%;
 }
 
 .footer {
 	position: relative;
+	z-index: 1;
 	width: 100%;
 	height: 10em;	
 	text-align: center;
