--- a/gifcache/templates/home/404.html
+++ b/gifcache/templates/home/404.html
@@ -1,12 +1,12 @@
-{% extends 'home/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 {% load staticfiles %}
 <div class="home-section animate-bg" style="padding-top: 2em; padding-bottom: .25em;">
     <div id="main-logo">
         <div class="main-logo-img spin"><img src="http://i.imgur.com/eXxTPkH.gif"></div>
-        <div class="error-code pulse">500</div>
+        <div class="error-code pulse">404</div>
     </div>
 
-    <div class="slogan" style="bottom: 4em;">Internal Server Error</div>
+    <div class="slogan" style="bottom: 4em;">Page Not Found</div>
 </div>
 {% endblock %}
