--- a/gifcache/templates/home/account_created.html
+++ b/gifcache/templates/home/account_created.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="account-created">
     <h1>Thanks for signing up, {{ name }}</h1>
