--- a/gifcache/templates/users/edit-profile.html
+++ b/gifcache/templates/users/edit-profile.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 
 <form action="/u/{{ username }}/update-profile/" method="post" class="main-form animate">
