--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -60,6 +60,13 @@ input {
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
+.main-form p {
+	margin: 1em auto;
+	text-align: center;
+	color: white;
+	font-size: 1.2em;
+}
+
 .main-form input {
 	max-width: 75%;
 	height: 1.5em;
