--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="container">
     <div class="profile-info animate">
