Cleaned up registration/password reset process, some CSS tweaks to landing page

--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -85,7 +85,7 @@
             can easily hit hundreds of megabytes very quickly.
 
             <div class="code-link animate">
-                <a href="https://github.com/kershner/gifcache">
+                <a href="https://github.com/kershner/gifcache" class="animate">
                     <i class="fa fa-github"></i>
                     View the code!
                 </a>
