--- a/gifcache/templates/home/login.html
+++ b/gifcache/templates/home/login.html
@@ -15,8 +15,8 @@
     <input type="submit" class="btn green-btn main-submit" value="Login">
 </form>
 
-<p>
-    <a href="{{ auth_pwd_reset_url }}">Forgot</a> your password?
-    <a href="{{ register_url }}">Need an account</a>?
+<p class="extra-login-links">
+    <a href="{{ auth_pwd_reset_url }}" style="color: #498FBD;">Forgot</a> your password?
+    <a href="{{ register_url }}" style="color: #498FBD;">Need an account</a>?
 </p>
 {% endblock %}
