--- a/gifcache/templates/registration/password_reset_complete.html
+++ b/gifcache/templates/registration/password_reset_complete.html
@@ -1,6 +1,9 @@
-{% extends "registration/registration_base.html" %}
-{% load i18n %}
-{% block title %}{% trans "Password reset complete" %}{% endblock %}
+{% extends "base.html" %}
+{% block title %}Password reset complete{% endblock %}
 {% block content %}
-Your password has been reset!  You may now <a href="{% url 'home:login' %}">log in</a>.
+<div class="main-form animate" style="padding: 2em;">
+    <h1 class="title animate">Success!</h1>
+
+    <p>Your password has been reset!  You may now <a href="{% url 'home:login' %}">log in</a>.</p>
+</div>
 {% endblock %}
