--- a/gifcache/templates/registration/password_reset_confirm.html
+++ b/gifcache/templates/registration/password_reset_confirm.html
@@ -1,12 +1,12 @@
-{% extends "registration/registration_base.html" %}
-{% load i18n %}
-{% block title %}{% trans "Confirm password reset" %}{% endblock %}
+{% extends "base.html" %}
+{% block title %}Confirm password reset{% endblock %}
 {% block content %}
-
 <form method='post' action='' class="main-form animate">
-    {% trans "Enter your new password below to reset your password:" %}
+    <h1 class="title animate">Password Reset</h1>
+
+    <div class="main-text" style="margin-bottom: 2em;">Enter your new password below</div>
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Set Password" class="btn green-btn main-submit">
+    <input type="submit" value="Set Password" class="btn green-btn main-submit" style="margin-top: 0;">
 </form>
 {% endblock %}
