--- a/gifcache/templates/registration/password_reset_email.html
+++ b/gifcache/templates/registration/password_reset_email.html
@@ -1,17 +1,12 @@
-{% load i18n %}{% trans "Greetings" %} {% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user }}{% endif %},
+Greetings {% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user }}{% endif %},
 
-{% blocktrans %}You are receiving this email because you
-requested that your password be reset on the {{ domain }} site.  If you do not 
-wish to reset your password, please ignore this message.
+You are receiving this email because you requested that your password be reset for GifCache.com.
+If you do not wish to reset your password, please ignore this message.
 
-To reset your password, please click the following link, or copy and paste it
-into your web browser:{% endblocktrans %}
-
+To reset your password, please click the following link, or copy and paste it into your web browser:
 {{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}
 
-{% blocktrans with username=user.username %}
-Your username, in case you've forgotten: {{ username }}
+Your username, in case you've forgotten: {{ user.username }}
 
 Best regards,
 {{ site_name }} Management
-{% endblocktrans %}
