--- a/gifcache/templates/registration/password_reset_form.html
+++ b/gifcache/templates/registration/password_reset_form.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="message">
-Forgot your password?  Enter your email in the form below and we'll send you instructions for creating a new one.
-</div>
-
-<form method='post' action='' class="main-form animate">
+<form method='post' action='' class="main-form no-labels animate">
+    <h1 class="title">Forgot your password?</h1>
+    <div class="main-text">
+        Enter your email in the form below and we'll send you instructions for creating a new one.
+    </div>
     {% csrf_token %}
     {{ form }}
-    <input type='submit' value="Reset Password" class="btn green-btn main-submit">
+    <input type='submit' value="Reset Password" class="btn green-btn main-submit" style="margin-top: 0;">
 </form>
 {% endblock %}
