--- a/gifcache/templates/registration/registration_form.html
+++ b/gifcache/templates/registration/registration_form.html
@@ -8,6 +8,10 @@
 <form action="" method="post" class="main-form animate">
     <h1 class="title">Sign Up!</h1>
 
+    <div class="main-text" style="margin-bottom: 1em;">
+        GifCache is free and we won't use your information for anything.
+    </div>
+
     {% csrf_token %}
     {{ form }}
     <input type="submit" class="btn green-btn main-submit">
