--- a/gifcache/templates/users/edit-profile.html
+++ b/gifcache/templates/users/edit-profile.html
@@ -32,6 +32,10 @@
     </div>
 
     <input type="submit" class="btn green-btn main-submit" value="Submit">
+
+    <div class="extra-login-links">
+        <a style="color: #bebebe;" href="{% url 'auth_password_reset' %}">Reset Password</a>
+    </div>
 </form>
 
 {% endblock content %}
