--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -15,6 +15,10 @@ a {
 	text-decoration: none;
 }
 
+a:hover {
+	color: #bebebe;
+}
+
 input {
 	display: block;
 	margin: .5em auto;
@@ -85,6 +89,10 @@ input {
 	text-shadow: 1px 1px 3px #000;
 }
 
+.no-labels label {
+	display: none;
+}
+
 .main-form .main-submit {
 	position: relative;
 	margin-top: 2em;
@@ -100,11 +108,17 @@ input {
 	left: .75em;
 	background-color: #25B972;
 	color: white;
-	font-size: 1.75em;
+	font-size: 1.25em;
 	text-shadow: 1px 1px 3px #000;
 	border: .15em solid white;
 	border-radius: .15em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+@media(min-width: 400px) {
+	.title {
+		font-size: 1.75em;
+	}
 }
 
 .label {
@@ -706,7 +720,6 @@ input {
 	display: inline-block;
 	position: relative;
 	margin: 1em .25em;
-	background-color: rgba(77, 77, 77, 0.2);
 	width: 40%;
 	max-width: 12em;
 	line-height: 2em;
@@ -717,9 +730,9 @@ input {
 	border-radius: .25em;
 }
 
-.home-btn:hover {	
-	background-color: #45C788;
+.home-btn:hover {
 	transform: scale(1.1);
+	background-color: #25B972;
 }
 
 .home-btn:active {	
@@ -823,7 +836,12 @@ input {
 }
 
 .code-link:hover {
-	transform: scale(1.25);
+	background-color: white;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.code-link:hover > a {
+	color: black;
 }
 
 .mini-logo {
@@ -910,40 +928,16 @@ input {
 	transform: scale(1.75);
 }
 
-/* Account Created Page */
-.account-created {
-	position: relative;
+.main-text {
 	margin: 1em auto;
-	margin-top: 10em;
-	padding: 2em;
-	max-width: 50em;
-	background-color: #6b71ce;
+	margin-bottom: 3em;
+	max-width: 40em;
 	text-align: center;
 	color: white;
-	text-shadow: 1px 1px 3px #000;
-	border: .2em solid white;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-	border-radius: .25em;
 }
 
-.account-created a {
-	display: inline-block;
-	position: relative;
-	color: white;
-	margin: 2em auto;
-	padding: 1em;
-	background-color: rgba(77, 77, 77, 0.2);
-	text-shadow: none;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-	border-radius: .25em;
-}
-
-.account-created a:hover {
-	transform: scale(1.1);
-}
-
-.account-created a:active {
-	top: .25em;
+.extra-login-links {
+	text-align: center;
 }
 
 /* Profile View Styles *********************************************************/
@@ -1672,6 +1666,7 @@ input {
 
 .delete-profile-button p {
 	display: inline-block;
+	margin: 0;
 	font-size: .75em;
 }
 
