--- a/gifcache/templates/registration/activate.html
+++ b/gifcache/templates/registration/activate.html
@@ -2,7 +2,8 @@
 {% block content %}
 {% if account %}
     <div class="main-form animate" style="padding: 2em;">
-        <p>Thanks {{ account }}, activation complete!</p>
+        <h1 class="title animate">Welcome to GifCache!</h1>
+        <p style="font-size: 1.5em;">Activation complete!</p>
         <p>You may now <a href="{% url 'home:login' %}">login</a> using the username and password you set at registration.</p>
     </div>
 {% else %}
