--- a/gifcache/templates/registration/activation_complete.html
+++ b/gifcache/templates/registration/activation_complete.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="main-form animate" style="padding: 2em;">
-    <p>Thanks, activation complete!</p>
+    <h1 class="title animate">Welcome to GifCache!</h1>
+    <p style="font-size: 1.5em;">Activation complete!</p>
     <p>You may now <a href="{% url 'home:login' %}">login</a> using the username and password you set at registration.</p>
 </div>
 {% endblock %}
