--- a/gifcache/templates/registration/password_reset_done.html
+++ b/gifcache/templates/registration/password_reset_done.html
@@ -1,9 +1,12 @@
-{% extends "registration/registration_base.html" %}
-{% load i18n %}
-{% block title %}{% trans "Password reset" %}{% endblock %}
+{% extends "base.html" %}
+{% block title %}Password reset{% endblock %}
 {% block content %}
 <div class="main-form animate" style="padding: 2em;">
-    <p>{% blocktrans %}We have sent you an email with a link to reset your password.
-    Please check your email and click the link to continue.{% endblocktrans %}</p>
+    <h1 class="title animate">Password Reset</h1>
+
+    <p>
+        We have sent you an email with a link to reset your password.
+        Please check your email and click the link to continue.
+    </p>
 </div>
 {% endblock %}
