Tweaks to markup for error pages, fixed backslash bugs in views, added static production folder to gitignore

--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -25,7 +25,7 @@
     <body>
 
     <div class="wrapper">
-        {% if title == 'Home' %}
+        {% if title == 'Home' or title == 'Error' %}
         <div class="nav hidden">
         {% else %}
         <div class="nav">
