--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -84,12 +84,12 @@
             Be aware that when using GifCache and viewing numerous GIFs, bandwidth usage
             can easily hit hundreds of megabytes very quickly.
 
-            <div class="code-link animate">
-                <a href="https://github.com/kershner/gifcache" class="animate">
-                    <i class="fa fa-github"></i>
-                    View the code!
-                </a>
-            </div>
+            <a href="https://github.com/kershner/gifcache" class="code-link-wrapper animate">
+                <div class="code-link animate">
+                        <i class="fa fa-github"></i>
+                        View the code!
+                </div>
+            </a>
         </div>
 
         <div class="home-about-section">
