--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -89,5 +89,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.0/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="{% static '/static/js/packery-mode.pkgd.min.js' %}"></script>
     <script type="text/javascript" src="{% static '/static/js/main.js' %}"></script>
+    <script>
+        $(document).ready(function () {
+            clickGifElements('{{ logged_in }}');
+        });
+    </script>
     </body>
 </html>
